# example-standalone-inferencing

./: .gitignore  CMakeLists.txt  Dockerfile.valgrind  Makefile  Makefile.c.tflite  Makefile.tflite  Makefile.utensor  README.md  build.bat  build.sh  edge-impulse-sdk  main.cpp
ei/: CMakeLists.txt  READMS.md
ei/edge-impulse-sdk/classifier/: ei_run_classifier.h
ei/model-parameters/: dsp_blocks.h  model_metadata.h  model_variables.h
ei/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
model-parameters/: dsp_blocks.h  model_metadata.h  model_variables.h
source/: ei_sampler.h  main.c  main.cpp
tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
